snctools: nc_isdim (new) + external updates
svn path=/trunk/matlab/; revision=5983


Former-commit-id: bdc230389d5f259bf70c5399846ff608dbb8e6a0

--- a/io/netcdf/snctools/ChangeLog
+++ b/io/netcdf/snctools/ChangeLog
@@ -1,3 +1,7 @@
+* April 11 2012 John Evans <john.g.evans.ne@gmail.com> -r3985
+- Fixed bug where only first unlimited dimension in enhanced file was
+- being correctly labeled.
+
 * March 23 2012 John Evans <john.g.evans.ne@gmail.com> -r3982
 - Fixed NC_DUMP's missing file ID on a few lines (thanks to Michael Morrin).
 
