--- a/io/netcdf/snctools/ChangeLog
+++ b/io/netcdf/snctools/ChangeLog
@@ -1,6 +1,6 @@
-* April 11 2012 John Evans <john.g.evans.ne@gmail.com> -r3985
-- Fixed bug where only first unlimited dimension in enhanced file was
-- being correctly labeled.
+* April 19 2012 John Evans <john.g.evans.ne@gmail.com> -r3996
+- Added THREDDS_INFO, THREDDS_DUMP in examples folder
+- Added NC_ISDIM (thanks to Gerben de Boer)
 
 * March 23 2012 John Evans <john.g.evans.ne@gmail.com> -r3982
 - Fixed NC_DUMP's missing file ID on a few lines (thanks to Michael Morrin).
