--- a/applications/ELV/trunk/manual/technical_reference/elv_technical_reference.tex
+++ b/applications/ELV/trunk/manual/technical_reference/elv_technical_reference.tex
@@ -1,10 +1,10 @@
 %Victor Chavarrias (victor.chavarrias@deltares.nl)
 %
-%$Revision: 11 $
-%$Date: 2021-07-30 16:39:15 +0200 (Fri, 30 Jul 2021) $
-%$Author: chavarri $
-%$Id: fig_his_1.m 11 2021-07-30 14:39:15Z chavarri $
-%$HeadURL: file:///P:/11206813-007-kpp2021_rmm-3d/E_Software_Scripts/00_svn/rmm_plot/fig_his_1.m $
+%$Revision$
+%$Date$
+%$Author$
+%$Id$
+%$HeadURL$
 %
 \documentclass{deltares_manual}
 
