svn path=/trunk/matlab/; revision=17438
Former-commit-id: 3d3e4e1ccba98a70fcc9c407a1b1ec2f9ed93be8

--- a/applications/ELV/trunk/manual/technical_reference/elv_technical_reference.tex
+++ b/applications/ELV/trunk/manual/technical_reference/elv_technical_reference.tex
@@ -8,6 +8,8 @@
 %
 \documentclass{deltares_manual}
 
+\svnid{$Id$}
+
 %---------references
 \usepackage{natbib} %references
 	\DeclareRobustCommand{\van}[3]{#2} %add \DeclareRobustCommand{\van}[3]{#3} before the bibliography
